[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Entities/player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="SphereShape" id=2]
radius = 1.25

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
script = ExtResource( 1 )

[node name="collision_body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="rotation_helper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="rotation_helper"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
keep_aspect = 0
doppler_tracking = 2
current = true
fov = 90.0

[node name="Flashlight" type="SpotLight" parent="rotation_helper"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
visible = false
light_energy = 5.0
light_indirect_energy = 1.5
light_bake_mode = 0
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 1.49648
spot_angle = 25.0
spot_angle_attenuation = 0.329877

[node name="playerfeet" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2.2, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Area" type="Area" parent="."]
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.7, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
